# sf-pang

./: .gitignore  CMakeLists.txt  README.md  References.md
apps/: CMakeLists.txt  pang.cpp
code/lib/: AiPaddle.hpp  Ball.hpp  Entity.hpp  Game.hpp  GameObject.hpp  GameObjectManager.hpp  GameState.hpp  Menu.hpp  Paddle.hpp  Player.h  Player.hpp  SplashScreen.hpp  World.hpp  game.hpp
code/src/: AiPaddle.cpp  Ball.cpp  Entity.cpp  Game.cpp  GameObject.cpp  GameObjectManager.cpp  Menu.cpp  Paddle.cpp  Player.cpp  SplashScreen.cpp  World.cpp  game.cpp  game.hpp  pang.cpp
docs/: references.md
include/: Ball.hpp  Entity.hpp  Game.hpp
libs/pang_lib/: CMakeLists.txt
libs/pang_lib/inc/: AiPaddle.hpp  Ball.hpp  Paddle.hpp  SplashScreen.hpp  World.hpp
libs/pang_lib/src/: Ball.cpp  Entity.cpp  Game.cpp  Menu.cpp  Paddle.cpp  SplashScreen.cpp  World.cpp
src/: AiPaddle.cpp  Ball.cpp  CMakeLists.txt  Game.cpp  Menu.cpp  Paddle.cpp  SplashScreen.cpp  World.cpp
